<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/popup_background"
    android:layout_gravity="center">

    <Button
        android:id="@+id/popup_xBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/circle_btn"
        android:text="@string/X"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/popup_oneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/one"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/popup_xBtn"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/popup_twoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/two"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/popup_xBtn"
        app:layout_constraintStart_toEndOf="@id/popup_oneBtn"/>

    <Button
        android:id="@+id/popup_threeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/three"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/popup_xBtn"
        app:layout_constraintStart_toEndOf="@id/popup_twoBtn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/popup_fourBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/four"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/popup_oneBtn"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/popup_fiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/five"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/popup_twoBtn"
        app:layout_constraintStart_toEndOf="@id/popup_fourBtn"/>

    <Button
        android:id="@+id/popup_sixBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/six"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/popup_threeBtn"
        app:layout_constraintStart_toEndOf="@id/popup_fiveBtn"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/popup_sevenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/seven"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/popup_fourBtn"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/popup_eightBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/eigth"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/popup_fiveBtn"
        app:layout_constraintStart_toEndOf="@id/popup_sevenBtn"/>

    <Button
        android:id="@+id/popup_nineBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/nine"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/popup_sixBtn"
        app:layout_constraintStart_toEndOf="@id/popup_eightBtn"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/popup_zeroBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/numbers_btn"
        android:text="@string/zero"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/popup_eightBtn"
        app:layout_constraintStart_toEndOf="@id/popup_sevenBtn"/>



</androidx.constraintlayout.widget.ConstraintLayout>