<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2f333f"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78"/>

    <Button
        android:id="@+id/btnAll"
        android:onClick="allNumbers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnAll"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:background="@drawable/btns"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline70"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <Button
        android:id="@+id/btnSingle"
        android:onClick="oneNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnSingle"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:background="@drawable/btns"
        app:layout_constraintBottom_toTopOf="@+id/guideline58"
        app:layout_constraintEnd_toStartOf="@+id/guideline70"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toTopOf="@+id/guideline42" />

    <Button
        android:id="@+id/btnSettings"
        android:onClick="settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btnSettings"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:background="@drawable/btns"
        app:layout_constraintBottom_toTopOf="@+id/guideline78"
        app:layout_constraintEnd_toStartOf="@+id/guideline70"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toTopOf="@+id/guideline62" />


</androidx.constraintlayout.widget.ConstraintLayout>